# datasette-homepage-table

./: README.md  pyproject.toml
datasette_homepage_table/: __init__.py
tests/: test_homepage_table.py
